# comp2006coursework-cmake-template

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  CMakePresets.json  README.md  demos.cmake  framework.cmake  vcpkg.json
CourseworkBase/: header.h  mainfunction.cpp
CourseworkBase/include/demos/advanced/: ExampleFilterPointClasses.h
CourseworkBase/include/framework/: BaseEngine.h  DisplayableObjectContainer.h  DrawingSurface.h  FilterPoints.h  ImagePixelMapping.h  RawImageData.h
CourseworkBase/src/demos/: BouncingBall.cpp  BouncingBallMain.cpp  MazeDemoMain.cpp  SimpleDemo.cpp
CourseworkBase/src/demos/advanced/: DraggingDemo.cpp  ImageMappingDemo.cpp  ZoomingDemo.cpp
CourseworkBase/src/framework/: BaseEngine.cpp  DrawingSurface.cpp  SimpleImage.cpp
app/: CMakeLists.txt
app/include/: main.h
app/src/: main.cpp
